Showing images in Dog List and fixing container alignments

--- a/src/components/dog-list/DogList.css
+++ b/src/components/dog-list/DogList.css
@@ -7,9 +7,9 @@
     width: 100%;
   }
 
-.content-container {
-  padding-top: 150px;
-  padding-bottom: 50px;
+img {
+  display: block;
+  margin: 0 auto 20px;
 }
 
 .content {
@@ -61,6 +61,25 @@ hr.star-primary:after {
   background-color: #fff;
 }
 
-.section h2 {
+.content.primary h2 {
   color: #2c3e50;
 }
+
+img{ max-width:100%;}
+
+.gallery-dog li{ width:33.333333%; max-width: 100% ; display:inline-block; float: left; text-align: center; overflow: hidden;    position: relative;}
+.gallery-dog{ padding:0;display: flow-root;}
+
+.gallery-dog li:hover img {
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -o-transform: scale(1.1);
+    transform: scale(1.1);
+}
+.gallery-dog li img{-webkit-transition: transform 0.5s ease;
+    -o-transition: transform 0.5s ease;
+    transition: transform 0.5s ease;}
+.gallery-dog .box_data{ position:absolute; top: 0; left: 0; right:0; bottom:0; color:#fff;}
+.gallery-dog .box_data span{ position:absolute; top: 50%; transform: translateY(-50%); left:0 ; right:0; font-size:24px;}
+.gallery-dog li:hover .box_data{ background:rgba(255,0,39,0.55)}
